Simple links to former content just for team review

--- a/index.html
+++ b/index.html
@@ -1,11 +1,15 @@
-<!DOCTYPE html><!--  This site was created in Webflow. https://www.webflow.com  -->
-<!--  Last Published: Tue Oct 31 2023 01:49:27 GMT+0000 (Coordinated Universal Time)  -->
-<html data-wf-page="65402ac329702bc0df43cfac" data-wf-site="64f625067a84a7b5f5fc4f0a">
+<!DOCTYPE html>
+
+<html>
 <head>
   <meta charset="utf-8">
-  <title>Test responsive exports</title>
+  <title>GCP - Resources & Reflections</title>
   <body>
     <h1>This is a placeholder page</h1>
-    <p>Content coming soon.</p>
+    <ol>
+        <li><a href="Prayers">Prayers</a></li>
+        <li><a href="Songs">Songs</a></li>
+        <li><a href="Stats">Stats</a></li>
+    </ol>
   </body>
 </html>
