Format a basic index file and css to show contents for review

--- a/index.html
+++ b/index.html
@@ -1,15 +1,28 @@
 <!DOCTYPE html>
-
-<html>
+<html lang="en">
 <head>
-  <meta charset="utf-8">
-  <title>GCP - Resources & Reflections</title>
-  <body>
-    <h1>This is a placeholder page</h1>
-    <ol>
-        <li><a href="Prayers">Prayers</a></li>
-        <li><a href="Songs">Songs</a></li>
-        <li><a href="Stats">Stats</a></li>
-    </ol>
-  </body>
+    <meta charset="UTF-8">
+    <title>Table of Contents</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <div class="toc">
+        <h1>Placeholder page</h1>
+        <h2>Prayers</h2>
+        <ul>
+            <li><a href="Prayers/GCP short prayer collection.pdf">GCP Short Prayer Collection</a></li>
+            <li><a href="Prayers/Habibi Prayer.pdf">Habibi Prayer</a></li>
+            <li><a href="Prayers/Liturgies Maryknoll US large-font.docx.pdf">Liturgies Maryknoll US (Large Font)</a></li>
+            <li><a href="Prayers/Munther Isaac prayer.pdf">Munther Isaac Prayer</a></li>
+        </ul>
+        <h2>Songs</h2>
+        <ul>
+            <li><a href="Songs/WE+DO+NOT+MOVE+ALONE+-+print+booklet.pdf">WE DO NOT MOVE ALONE - Print Booklet</a></li>
+        </ul>
+        <h2>Stats</h2>
+        <ul>
+            <li><a href="Stats/Gaza-flyer-2024.pdf">Gaza Flyer 2024</a></li>
+        </ul>
+    </div>
+</body>
 </html>
