increase font size, change page title

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Table of Contents</title>
+    <title>GCP - Reflection &amp; Response</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
