--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@
         <ul>
             <li><a href="Stats/Gaza-flyer-2024.pdf">Gaza Flyer 2024</a></li>
         </ul>
+        <h2>Indigenous history in the US</h2>
+        <ul>
+            <li><a href="#">Amy&apos;s content here</a></li>
+        </ul>
     </div>
 </body>
 </html>
