clean and simplify

--- a/index-new.html
+++ b/index-new.html
@@ -11,7 +11,7 @@
         <ul class="primary-menu">
             <li><button class="menu-button">Primary 1</button>
                 <ul class="secondary-menu">
-                    <li><a href="#">Secondary 1a</a></li>
+                    <li><a href="muntar.html">Muntar Isaac Prayer</a></li>
                     <li><a href="#">Secondary 1b</a></li>
                 </ul>
             </li>
@@ -23,10 +23,8 @@
             </li>
         </ul>
     </div>
-    <div class="card">
-        <h2>Heading 1</h2>
-        <p>This is a simple text block that's easily readable on mobile devices.</p>
-    </div>
+    
+    
     <script src="script.js"></script>
 </body>
 </html>
