--- a/muntar.html
+++ b/muntar.html
@@ -1,67 +1,29 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-<title>W3.CSS Template</title>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="w3.css">
-<link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Roboto'>
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-
-
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Muntar Isaac Prayer</title>
+    <link rel="stylesheet" href="style.css">
 </head>
-<body class="w3-light-grey">
+<body>
+    <div class="card">
+      <div class="card-nav"><a href="index-new.html">< BACK</a></div>
+        <h2>Muntar Isaac Prayer</h2>
+        <p>My God, my God, why did you leave Gaza? <br>
+          How long will you forget her completely? <br>
+          Why do you hide your face from Gaza? <br>
+          In the daytime I call upon you, but you do not answer; by night we find no rest. <br>
+          Do not depart from the people of Gaza, <br>
+          for distress is near, for there is no one to help. Our souls and our lives approach the abyss, Our eyes melt from humiliation <br>
+          We call upon you, Lord, every day. <br>
+          We stretch out our hands to you. <br>
+          Why, Lord, do you reject our souls? <br>
+          Why do you hide your face from us? <br> <br>
 
-<!-- Page Container -->
-<div class="w3-content w3-margin-top" style="max-width:1400px;">
-
-  <!-- The Grid -->
-  <div class="w3-row-padding">
-  
-
-    <!-- Right Column -->
-    <div class="w3-twothird">
-    
-      <div class="w3-container w3-card w3-white w3-margin-bottom">
-        <h2 class="w3-text-grey w3-padding-16"><a href="index.html"><i class="fa fa-arrow-left fa-fw w3-margin-right w3-xxlarge w3-text-gcp"></a></i>Muntar Isaac Prayer</h2>
-        <div class="w3-container" style="margin-bottom: 80px;">
-          <!-- <h5 class="w3-opacity"><b>Front End Developer / w3schools.com</b></h5> -->
-          <p>My God, my God, why did you leave Gaza? <br>
-            How long will you forget her completely? <br>
-            Why do you hide your face from Gaza? <br>
-            In the daytime I call upon you, but you do not answer; by night we find no rest. <br>
-            Do not depart from the people of Gaza, <br>
-            for distress is near, for there is no one to help. Our souls and our lives approach the abyss, Our eyes melt from humiliation <br>
-            We call upon you, Lord, every day. <br>
-            We stretch out our hands to you. <br>
-            Why, Lord, do you reject our souls? <br>
-            Why do you hide your face from us? <br> <br>
-
-            Rev. Dr. Munther Isaac, Lutheran Pastor in Bethlehem Adapted from Psalms 13, 22, and 88
-            </p>
-        </div>
-      </div>
-
-
-    <!-- End Right Column -->
+          Rev. Dr. Munther Isaac, Lutheran Pastor in Bethlehem Adapted from Psalms 13, 22, and 88
+          </p>
     </div>
-    
-  <!-- End Grid -->
-  </div>
-  
-  <!-- End Page Container -->
-</div>
-
-  <!-- <footer class="w3-container w3-gcp w3-center w3-margin-top">
-  <p>Gaza Ceasefire Pilgrimage.</p>
-  <i class="fa fa-facebook-official w3-hover-opacity"></i>
-  <i class="fa fa-instagram w3-hover-opacity"></i>
-  <i class="fa fa-snapchat w3-hover-opacity"></i>
-  <i class="fa fa-pinterest-p w3-hover-opacity"></i>
-  <i class="fa fa-twitter w3-hover-opacity"></i>
-  <i class="fa fa-linkedin w3-hover-opacity"></i>
-  <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a></p> 
-</footer>-->
-
+    <script src="script.js"></script>
 </body>
 </html>
