shift prayers into folder

--- a/Prayers/muntar.html
+++ b/Prayers/muntar.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="card">
-      <div class="card-nav"><a href="index-new.html">< BACK</a></div>
+      <div class="card-nav"><a href="../">< BACK</a></div>
         <h2>Muntar Isaac Prayer</h2>
         <p>My God, my God, why did you leave Gaza? <br>
           How long will you forget her completely? <br>
