--- a/index-new.html
+++ b/index-new.html
@@ -9,16 +9,18 @@
 <body>
     <div class="menu-card">
         <ul class="primary-menu">
-            <li><button class="menu-button">Primary 1</button>
+            <li><button class="menu-button">Prayers</button>
                 <ul class="secondary-menu">
-                    <li><a href="muntar.html">Muntar Isaac Prayer</a></li>
-                    <li><a href="#">Secondary 1b</a></li>
+                    <li><a href="Prayers/muntar.html">Munther Isaac Prayer</a></li>
+                    <li><a href="Prayers/A liturgy for Palestine.pdf">A Liturgy for Palestine</a></li>
+                    <li><a href="Prayers/GCP short prayer collection.pdf">GCP Short Prayer Collection</a></li>
+                    <li><a href="Prayers/Habibi Prayer.pdf">Habibi Prayer</a></li>
+                    <li><a href="Prayers/Liturgies Maryknoll.pdf">Liturgies Maryknoll US (Large Font)</a></li>
                 </ul>
             </li>
-            <li><button class="menu-button">Primary 2</button>
+            <li><button class="menu-button">Songs</button>
                 <ul class="secondary-menu">
-                    <li><a href="#">Secondary 2a</a></li>
-                    <li><a href="#">Secondary 2b</a></li>
+                    <li><a href="Songs/WE+DO+NOT+MOVE+ALONE+-+print+booklet.pdf">WE DO NOT MOVE ALONE - Print Booklet</a></li>
                 </ul>
             </li>
         </ul>
