more style refinements

--- a/index-new.html
+++ b/index-new.html
@@ -11,16 +11,17 @@
         <ul class="primary-menu">
             <li><button class="menu-button">Prayers</button>
                 <ul class="secondary-menu">
-                    <li><a href="Prayers/muntar.html">Munther Isaac Prayer</a></li>
-                    <li><a href="Prayers/A liturgy for Palestine.pdf">A Liturgy for Palestine</a></li>
-                    <li><a href="Prayers/GCP short prayer collection.pdf">GCP Short Prayer Collection</a></li>
-                    <li><a href="Prayers/Habibi Prayer.pdf">Habibi Prayer</a></li>
-                    <li><a href="Prayers/Liturgies Maryknoll.pdf">Liturgies Maryknoll US (Large Font)</a></li>
+                    <li><a href="prayers/muntar.html">Munther Isaac Prayer</a></li>
+                    <li><a href="prayers/A liturgy for Palestine.pdf">A Liturgy for Palestine</a></li>
+                    <li><a href="prayers/GCP short prayer collection.pdf">GCP Short Prayer Collection</a></li>
+                    <li><a href="prayers/Habibi Prayer.pdf">Habibi Prayer</a></li>
+                    <li><a href="prayers/Liturgies Maryknoll.pdf">Liturgies Maryknoll US (Large Font)</a></li>
                 </ul>
             </li>
             <li><button class="menu-button">Songs</button>
                 <ul class="secondary-menu">
-                    <li><a href="Songs/WE+DO+NOT+MOVE+ALONE+-+print+booklet.pdf">WE DO NOT MOVE ALONE - Print Booklet</a></li>
+                    <li><a href="songs/there-is-more-love.html">There is More Love Somewhere</a></li>
+                    <li><a href="songs/WE+DO+NOT+MOVE+ALONE+-+print+booklet.pdf">WE DO NOT MOVE ALONE - Print Booklet</a></li>
                 </ul>
             </li>
         </ul>
