--- a/Prayers/muntar.html
+++ b/Prayers/muntar.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Muntar Isaac Prayer</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body>
     <div class="card">
@@ -19,10 +19,10 @@
           We call upon you, Lord, every day. <br>
           We stretch out our hands to you. <br>
           Why, Lord, do you reject our souls? <br>
-          Why do you hide your face from us? <br> <br>
-
-          Rev. Dr. Munther Isaac, Lutheran Pastor in Bethlehem Adapted from Psalms 13, 22, and 88
+          Why do you hide your face from us? <br> 
           </p>
+          <div class="credits">Rev. Dr. Munther Isaac, Lutheran Pastor in Bethlehem <br>
+            Adapted from Psalms 13, 22, and 88</div>
     </div>
     <script src="script.js"></script>
 </body>
