--- a/index-new.html
+++ b/index-new.html
@@ -24,9 +24,19 @@
                     <li><a href="songs/WE+DO+NOT+MOVE+ALONE+-+print+booklet.pdf">WE DO NOT MOVE ALONE - Print Booklet</a></li>
                 </ul>
             </li>
+            <li><button class="menu-button">Gaza Stats</button>
+                <ul class="secondary-menu">
+                    <li><a href="Stats/Gaza-flyer-2024.pdf">2024 Flyer by If Americans Knew</a></li>
+                </ul>
+            </li>
+            <li><span class="menu-button-direct"><a href="indigenous/">Indigenous History in North America</a></span>
+                <ul class="secondary-menu">
+                    <li><a href="Stats/Gaza-flyer-2024.pdf">2024 Flyer by If Americans Knew</a></li>
+                </ul>
+            </li>
+
         </ul>
     </div>
-    
     
     <script src="script.js"></script>
 </body>
