--- a/indigenous/index.html
+++ b/indigenous/index.html
@@ -10,9 +10,9 @@
     <div class="card">
       <div class="card-nav"><a href="../">< BACK</a></div>
         <h2>Indigenous History in North America</h2>
-        <p class="warning">Many, if not all, of these resources will contain violence and trauma, as that is the reality of much of U.S. history and current events. Please be aware of this and take care of yourself, particularly if your ancestors are ones who may have lived through these traumatic events and experienced the violence in their bodies. 
+        <p class="warning">Warning: Many, if not all, of these resources will contain violence and trauma, as that is the reality of much of U.S. history and current events. Please be aware of this and take care of yourself, particularly if your ancestors are ones who may have lived through these traumatic events and experienced the violence in their bodies. <br><br>
 
-          Also please be aware that the resources here are by no means the extent of the learning that could be done, but hopefully it can give you a place to start in your learning journey. </p>
+        Also please be aware that the resources here are by no means the extent of the learning that could be done, but hopefully it can give you a place to start in your learning journey. </p>
 
         <p>asdf <br>
           </p>
