--- a/indigenous/index.html
+++ b/indigenous/index.html
@@ -14,10 +14,23 @@
 
         Also please be aware that the resources here are by no means the extent of the learning that could be done, but hopefully it can give you a place to start in your learning journey. </p>
 
-        <p>asdf <br>
-          </p>
-          <div class="credits">Words & Music: African American Hymn</div>
-          <div class="article-links"><a href="https://www.youtube.com/watch?v=Xny5JGu1GwA">Song link on Youtube</a></div>
+        <h3>Book Recommendations</h3>
+        <ul>
+          <li><a href="https://www.goodreads.com/book/show/6919721-the-history-of-white-people">The History of White People</a> by Neil Painter Harris</li>
+          <li><a href="https://www.goodreads.com/book/show/13721512-savage-anxieties">Savage Anxieties</a> by Robert A. Williams Jr</li>
+          <li><a href="https://www.goodreads.com/book/show/167074.Utopian_Legacies">Utopian legacies</a> by John Mohawk</li>
+          <li><a href="https://www.goodreads.com/book/show/25315735-stand-your-ground">Stand Your Ground</a> by Kelly Brown Douglas</li>
+          <li><a href="https://www.goodreads.com/book/show/39020.1491">1491: New Revelations of the Americas Before Columbus</a> by Charles C. Mann</li>
+        </ul>
+        
+        <h3>Book Recommendations Particularly for Christians</h3>
+        <ul>
+          <li><a href="https://www.goodreads.com/en/book/show/46033992">Unsettling Truths</a> by Mark Charles and Soong-Chan Rah (Read here: <a href="Charles-and-Rah-CH1.pdf">Ch. 1</a> and <a href="Charles-and-Rah-CH7.pdf">Ch. 7</a>)</li>
+          <li><a href="https://www.goodreads.com/book/show/14930739-shalom-and-the-community-of-creation">Shalom and the Community of Creation</a> by Randy Woodley</li>
+          <li><a href="https://www.goodreads.com/book/show/59530103-indigenous-theology-and-the-western-worldview?">Indigenous Theology and the Western Worldview</a> by Randy Woodley</li>
+          <li><a href="https://www.goodreads.com/book/show/24043200-rescuing-the-gospel-from-the-cowboys">Rescuing the Gospel from the Cowboys</a> by Richard Twiss</li>
+        </ul>
+
 
     </div>
     <script src="script.js"></script>
