--- a/indigenous/index.html
+++ b/indigenous/index.html
@@ -32,6 +32,30 @@
         </ul>
 
 
+        <h3>Podcast Recommendations</h3>
+        <h4>All My Relations: <a href="https://www.allmyrelationspodcast.com/">https://www.allmyrelationspodcast.com/</a></h4>
+        <p>&ldquo;A podcast where we explore what it means to be a Native person in 2019.  To be an Indigenous person is to be engaged in relationships—relationships to land and place, to a people, to non-human relatives, and to one another. All My Relations is a place to explore those relationships, and to think through Indigeneity in all its complexities. <br><br>
+ 
+        On each episode hosts Matika Wilbur (Tulalip and Swinomish) and Adrienne Keene (Cherokee Nation), delve into a different topic facing Native peoples today, bringing in guests from all over Indian Country to offer perspectives and stories.&rdquo;</p>
+
+        <ul>
+          <li>All My Relations: <a href="https://www.allmyrelationspodcast.com/podcast/episode/4ef64ddc/the-border-crossed-us">The Border Crossed Us</a></li>
+          <li>All My Relations: <a href="https://www.allmyrelationspodcast.com/podcast/episode/785457fc/black-native-history-with-dr-tiya-miles">Black Native History with Dr. Tina Nyles</a></li>          
+        </ul>
+
+        <h4>Peacing It All Together: <a href="https://www.peacingitalltogether.com/">https://www.peacingitalltogether.com/</a></h4>
+        <p>Peacing it All Together is more than a podcast. It&rsquo;s a journey place that is hosting space for deep dialogue and radical integration.”Peacing It All Together is hosted by Bo Sanders and Randy Woodley. Per the website page: <br><br>
+
+          &ldquo;Bo is wrapping up a doctorate where his research looks at the intersection of race and religion. He also works as pastor  at a United Methodist church in Portland, OR.  Bo employs critical race theory (CRT) as his lens in the hope of helping communities address issues related to <em>whiteness</em> in the midst of changing demographics and cultural shifts.&rdquo; <br><br>
+          
+          &ldquo;Dr. Randy Woodley, (PhD) is an activist/scholar, distinguished speaker, teacher and wisdom keeper who addresses a variety of issues concerning American history and culture, spirituality, decolonizing, community-building, faith, social justice, diversity, regenerative farming, climate-change, our relationship with the earth and Indigenous realities. Randy was raised near Detroit, Michigan and is a Cherokee descendent recognized by the United Keetoowah Band of Cherokee Indians in Oklahoma.&rdquo;</p>
+
+          <ul>
+            <li>Peacing It All Together: <a href="https://www.peacingitalltogether.com/podcast/2019/2/11/episode-33-ally-dos-and-donts">Ally Do&rsquo;s And Don&rsquo;t&rsquo;s </a></li>
+            <li>Peacing It All Together: <a href="https://www.peacingitalltogether.com/podcast/2018/8/27/episode-14-peacing">Peacing (Pt. 1 of 2)</a></li>          
+            <li>Peacing It All Together: <a href="https://www.peacingitalltogether.com/podcast/2018/8/29/episode-15-peace-making">Peacing (Pt. 2 of 2)</a></li>          
+          </ul>
+
     </div>
     <script src="script.js"></script>
 </body>
