--- a/index.html
+++ b/index.html
@@ -12,14 +12,15 @@
             <li><button class="menu-button">Prayers</button>
                 <ul class="secondary-menu">
                     <li><a href="prayers/muntar.html">Munther Isaac Prayer</a></li>
+                    <li><a href="prayers/habibi-prayer.html">Habibi Prayer</a></li>
                     <li><a href="prayers/A liturgy for Palestine.pdf">A Liturgy for Palestine</a></li>
                     <li><a href="prayers/GCP short prayer collection.pdf">GCP Short Prayer Collection</a></li>
-                    <li><a href="prayers/Habibi Prayer.pdf">Habibi Prayer</a></li>
-                    <li><a href="prayers/Liturgies Maryknoll.pdf">Liturgies Maryknoll US (Large Font)</a></li>
+                    <li><a href="prayers/Liturgies Maryknoll.pdf">Liturgies Mary Knoll</a></li>
                 </ul>
             </li>
             <li><button class="menu-button">Songs</button>
                 <ul class="secondary-menu">
+                    <li><a href="songs/misc.html">Short songs</a></li>
                     <li><a href="songs/there-is-more-love.html">There is More Love Somewhere</a></li>
                     <li><a href="songs/WE+DO+NOT+MOVE+ALONE+-+print+booklet.pdf">WE DO NOT MOVE ALONE - Print Booklet</a></li>
                 </ul>
