--- a/songs/misc.html
+++ b/songs/misc.html
@@ -60,7 +60,7 @@
         I hear the voice of my  <br>
         Grandmother calling me <br>
         I hear the voice of my  <br>
-        Grandmother’s song <br> <br>
+        Grandmother&rsquo;s song <br> <br>
  
         She says: stand in your power,  <br>
         women stand in your power.  <br>
@@ -86,15 +86,15 @@
         She say: wake up, wake up,  <br>
         child wake up, wake up <br>
         Listen, listen. <br>
-        Listen, listen. <br>
+        Listen, listen. <br> <br>
  
-        May de waters all run clear.  <br>
+        May the waters all run clear.  <br>
         May the mountains be unspoiled.  <br>
         May the air be clean,  <br>
         may the trees grow tall,  <br>
         may the earth be shared by all. 
       </p>
-        <div class="credits">Words & Music: (If somebody knows the source of this, please let me know.)</div>
+        <div class="credits">Words & Music: (If somebody knows the source of this, please let me know. Is it Sandy Vaughn?)</div>
         <div class="article-links"><a href="https://www.instagram.com/p/C3XXu_KNEpC/">Jewish students at Howard University sing on Instagram</a></div>
 
   </div>
