--- a/index.html
+++ b/index.html
@@ -12,17 +12,18 @@
             <li><button class="menu-button">Prayers</button>
                 <ul class="secondary-menu">
                     <li><a href="prayers/muntar.html">Munther Isaac Prayer</a></li>
+                    <li><a href="prayers/gcp.html">Short prayers</a></li>
                     <li><a href="prayers/habibi-prayer.html">Habibi Prayer</a></li>
-                    <li><a href="prayers/A liturgy for Palestine.pdf">A Liturgy for Palestine</a></li>
-                    <li><a href="prayers/GCP short prayer collection.pdf">GCP Short Prayer Collection</a></li>
-                    <li><a href="prayers/Liturgies Maryknoll.pdf">Liturgies Mary Knoll</a></li>
+                    <li><a href="prayers/for-pal-people.html">Prayer for the Palestinian People</a></li>
+                    <li><a href="prayers/a-liturgy.html">A Liturgy by the church of Aotearoa</a></li>
+                    <li><a href="prayers/liturgies.html">Via Dolorosa of Solidarity</a></li>
+                    <li><a href="prayers/kaddish.html">Kaddish for the Soul of Judaism: Genocide in Palestine</a></li>
                 </ul>
             </li>
             <li><button class="menu-button">Songs</button>
                 <ul class="secondary-menu">
                     <li><a href="songs/misc.html">Short songs</a></li>
-                    <li><a href="songs/there-is-more-love.html">There is More Love Somewhere</a></li>
-                    <li><a href="songs/WE+DO+NOT+MOVE+ALONE+-+print+booklet.pdf">WE DO NOT MOVE ALONE - Print Booklet</a></li>
+                    <li><a href="songs/WE+DO+NOT+MOVE+ALONE+-+print+booklet.pdf">We Do Not Move Alone - Print Booklet</a></li>
                 </ul>
             </li>
             <li><button class="menu-button">Gaza Stats</button>
@@ -35,15 +36,10 @@
     </div>
     
     <div class="menu-card">
-        <ul class="primary-menu">
-            
-            <li><span class="menu-button-direct"><a href="indigenous/">Indigenous History in North America</a></span>
-                <ul class="secondary-menu">
-                    <li><a href="Stats/Gaza-flyer-2024.pdf">2024 Flyer by If Americans Knew</a></li>
-                </ul>
-            </li>
+        <h4>Post-pilgrimage resources</h4>
+            <div class="menu-button-direct"><a href="indigenous/">Indigenous History in North America</a></div>
+            <div class="menu-button-direct"><a href="https://www.portlandmennonite.org/palestine-israel.html">PMC Resources</a></div>
 
-        </ul>
     </div>
  
     <script src="script.js"></script>
