--- a/songs/misc.html
+++ b/songs/misc.html
@@ -99,6 +99,31 @@
 
   </div>
 
+
+  <div class="card">
+      <h2>There is More Love Somewhere</h2>
+      <p>There is more love somewhere. <br>
+        There is more love somewhere. <br>
+        I'm gonna keep on 'til I find it. <br>
+        There is more love somewhere. <br>
+        There is more hope somewhere. <br>
+        There is more hope somewhere. <br>
+        I'm gonna keep on 'til I find it. <br>
+        There is more hope somewhere. <br>
+        There is more peace somewhere. <br>
+        There is more peace somewhere. <br>
+        I'm gonna keep on 'til I find it. <br>
+        There is more peace somewhere. <br>
+        There is more joy somewhere. <br>
+        There is more joy somewhere. <br>
+        I'm gonna keep on 'til I find it. <br>
+        There is more joy somewhere. <br>
+        </p>
+        <div class="credits">Words & Music: African American Hymn</div>
+        <div class="article-links"><a href="https://www.youtube.com/watch?v=Xny5JGu1GwA">Song link on Youtube</a></div>
+
+  </div>
+
     <script src="script.js"></script>
 </body>
 </html>
