--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     
     <div class="menu-card">
         <h4>Post-pilgrimage resources</h4>
-            <div class="menu-button-direct"><a href="https://www.portlandmennonite.org/palestine-israel.html">PMC Resources</a></div>
+            <div class="menu-button-direct"><a href="resources/">Palestine Resources</a></div>
             <div class="menu-button-direct"><a href="indigenous/">Indigenous History in North America</a></div>
 
     </div>
