add a heading to the main page

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 </head>
 <body>
     <div class="menu-card">
+        <h4>Pilgrimage resources</h4>
+
         <ul class="primary-menu">
             <li><button class="menu-button">Prayers</button>
                 <ul class="secondary-menu">
