--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <div class="menu-card">
+        <button onclick="playAudio()">Zanana</button>
         <h4>Pilgrimage resources</h4>
 
         <ul class="primary-menu">
@@ -45,5 +46,22 @@
     </div>
  
     <script src="script.js"></script>
+    <script>
+        // Replace 'your_audio_file.mp3' with the path to your actual MP3 file
+        var audio = new Audio('zanana_mixdown.mp3');
+        
+        // Loop the audio
+        audio.loop = true;
+        
+        function playAudio() {
+          // Play or pause the audio depending on its current state
+          if (audio.paused) {
+            audio.play();
+          } else {
+            audio.pause();
+            audio.currentTime = 0; // Optionally reset the audio to the start if you want to stop and reset it instead of pausing
+          }
+        }
+        </script>
 </body>
 </html>
