added another couple of books

--- a/resources/index.html
+++ b/resources/index.html
@@ -77,8 +77,13 @@
   <strong><a href="https://www.goodreads.com/book/show/57540.The_Ethnic_Cleansing_of_Palestine">The Ethnic Cleansing of
       Palestine</a>,</strong> by Ilan Pappé<br>A scholarly, detailed account of the foundation of Israel by
   violence&nbsp;<br><br>
+  <strong><a href="https://www.goodreads.com/book/show/2856775-the-biggest-prison-on-earth">The Biggest Prison on Earth: A History of the Occupied Territories</a>,</strong> by Ilan Pappé<br><br>
+  <strong><a href="https://www.goodreads.com/book/show/31171856-ten-myths-about-israel">Ten Myths About Israel</a>,</strong> by Ilan Pappé<br><br>
 
   <strong><a href="https://www.goodreads.com/book/show/41812831-the-hundred-years-war-on-palestine">The Hundred Years&apos; War on Palestine: A History of Settler Colonialism and Resistance, 1917&ndash;2017</a>,</strong> by Rashid Khalidi<br><br>
+
+  <strong><a href="https://www.goodreads.com/book/show/41812831-the-hundred-years-war-on-palestine">The Hundred Years&apos; War on Palestine: A History of Settler Colonialism and Resistance, 1917&ndash;2017</a>,</strong> by Rashid Khalidi<br><br>
+
 
   <strong><a href="https://www.goodreads.com/book/show/9345.Palestine">Peace, Not Apartheid</a></strong> by Jimmy Carter<br><br>
   <strong><a href="https://www.goodreads.com/book/show/17366045-goliath?ref=nav_sb_ss_1_25">Goliath</a></strong> by Max
