update film url

--- a/resources/index.html
+++ b/resources/index.html
@@ -33,7 +33,7 @@
       href="https://www.cultureunplugged.com/documentary/watch-online/play/52720/where-should-the-birds-fly"><span
         style="color:rgb(17, 85, 204); font-weight:700">Where Should the Birds Fly</span></a></span><br><span><span
       style="color:rgb(0, 0, 0)">A film documenting Israeli assaults on Gaza during the period between 2004 and
-      2011.</span></span><br><br><span><a href="http://www.thegatekeepersfilm.com/"><span
+      2011.</span></span><br><br><span><a href="https://www.youtube.com/watch?v=J1N93pFcopE"><span
         style="color:rgb(17, 85, 204); font-weight:700">The Gatekeepers</span></a></span><br><span><span
       style="color:rgb(0, 0, 0)">Incredible film produced by Israeli Jews and not designed to promote Palestinian
       activism. They interview all the leaders of the Israeli Shin Bet (equivalent to the FBI), who say things like "We
